<resources>
    <string name="app_name">PickMyPlans</string>
    <string name="image_description">Image Description</string>
    <string name="saved_places_button">View saved places</string>
    <string name="start_button">Find a Place</string>
    <string name="app_title_text_view">PickMyPlans</string>
    <string name="all_places_button">Show all places</string>
    <string name="result_image_description">Icon of what to do</string>
    <string name="logo_image_desc">Logo of the application</string>
    <string name="favorites_button">Add to favorites</string>
    <string name="rating_button">Rate this place</string>
    <string name="detail_image">Detail Image</string>
    <string name="added_fav_btn">Added to Favorites</string>
    <string name="category_text">Pick by Category</string>
    <string name="submit_rating_btn">Submit Rating</string>
    <string name="show_places_btn">Show me places</string>
    <string name="change_rating_btn">Change Rating</string>
    <string name="result_text_view">You should go..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beach_btn">Beach</string>
    <string name="biking_btn">Biking</string>
    <string name="camping_btn">Camping</string>
    <string name="hiking_btn">Hiking</string>
    <string name="picnic_btn">Picnic</string>
    <string name="ski_btn">Ski</string>
    <string name="sunset_btn">Sunset</string>
    <string name="waterfall_btn">Waterfalls</string>
    <string name="party_btn">Party</string>
</resources>